[package]
name = "ying"
version = "0.1.0"
edition = "2021"

[dependencies]
enumflags2 = "0.7.8"
hex = "0.4.3"
jemallocator = "0.5.4"
log = "0.4.20"
num-derive = "0.4.1"
num-traits = "0.2.17"
pnet_macros = "0.34.0"
pnet_macros_support = "0.34.0"
prost = "0.12.1"
rand = "0.8.5"
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.108"
aes-gcm = { version = "0.10.3", features = ["std"] }
crypto_secretbox = { version = "0.1.1", features = ["std"] }
chacha20poly1305 = { version = "0.10.1", features = ["std"] }
crypto-common = { version = "0.1.6", features = ["std"] }
aead = { version = "0.5.2", features = ["std"] }
opus = "0.3.0"
clap = { version = "4.4.8", features = ["derive"] }
xx-core = { git = "https://github.com/davidzeng0/xx-core" }
xx-pulse = { git = "https://github.com/davidzeng0/xx-pulse" }
xx-url = { git = "https://github.com/davidzeng0/xx-url" }
xx-mpeg = { git = "https://github.com/davidzeng0/xx-mpeg" }

[build-dependencies]
prost-build = "0.12.1"

[profile.release]
lto = true
